dj and actlist v1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,13 @@
 ﻿<header>
   <nav>
     <ul>
-      <li routerLink="/artists" routerLinkActive="active">
-        <span>Artists</span>
-        <ul>
-          <li routerLink="/artists/liveacts" routerLinkActive="active">
+      <li routerLink="/liveacts" routerLinkActive="active">
             <span>Liveacts</span>
           </li>
-          <li routerLink="/artists/djs" routerLinkActive="active">
+          <li routerLink="/djs" routerLinkActive="active">
             <span>Djs</span>
           </li>
-        </ul>
-      </li>
-      <li routerLink="/calendar" routerLinkActive="active">
-        <span>Calendar</span>
-      </li>
+
       <li routerLink="/releases" routerLinkActive="active">
         <span>Releases</span>
       </li>
