--- a/src/app/pages/admin.component.html
+++ b/src/app/pages/admin.component.html
@@ -9,6 +9,9 @@
   </div>
   <div *ngIf="panel.name == 'artists'" class="panel">
     <h1>Artists  Panel</h1>
+    <div>
+      <button>New artist</button>
+    </div>
   </div>
   <div *ngIf="panel.name == 'releases'" class="panel">
     <h1>Releases  Panel</h1>
